--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home Page</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pZB3o6XxIG8vA5V9v3oV7sEe6jQvZV4dPZC2t5+2mYV0X/5X+z3U1X+PZB3o6XxIG8vA5V9v3oV7sEe6jQvZV4dPZC2t5+2mYV0X/5X+z3" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script>
     const appId = "1291328168557869";  
     // Make sure this matches exactly what's in server.js and in your FB app settings
-    const urlencode = encodeURIComponent("https://bb37-109-166-130-233.ngrok-free.app/redirect");
+    const urlencode = encodeURIComponent("https://3834-89-238-211-222.ngrok-free.app/redirect");
     const facebookOAuthURL = `https://www.facebook.com/v21.0/dialog/oauth?client_id=${appId}&redirect_uri=${urlencode}&state=12345`;
 
     function redirectToFacebookOAuth() {
@@ -16,7 +18,17 @@
   </script>
 </head>
 <body>
-  <h1>Welcome to the Home Page</h1>
-  <button onclick="redirectToFacebookOAuth()">Connect to Facebook</button>
+  <div class="card-container">
+    <div class="card">
+      <div class="card-front">
+        <h1>PathFinder</h1>
+      </div>
+      <div class="card-back">
+        <button class="facebook-button" onclick="redirectToFacebookOAuth()">
+          <i class="fab fa-facebook-f"></i> Connect to Facebook
+        </button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
