--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         <h1>PathFinder</h1>
       </div>
       <div class="card-back">
+        <p>Click below to connect your Facebook account for analysis!</p>
         <button class="facebook-button" onclick="redirectToFacebookOAuth()">
           <i class="fab fa-facebook-f"></i> Connect to Facebook
         </button>
