--- a/public/success.html
+++ b/public/success.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h1>Access Token Received, Processing...</h1>
+  <h1>Your information is being processed, this should not take long</h1>
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const accessToken = urlParams.get('access_token');
